--- a/easy.testform/index.html
+++ b/easy.testform/index.html
@@ -16,7 +16,7 @@
         <div class="modal-control">
             <div><label>Product</label></div>
             <div><select ><!-- Isto é simplesmente demonstrar como funcionam na tag 'select' -->
-                <option e-tmp="Product" value="--e-Id--">--e-Name--</option>
+                <option e-tmp="Product" value="-e-Id-">-e-Name-</option>
             </select></div>
         </div>
         
@@ -91,31 +91,31 @@
     </div>
     <!-- Single -->
     <div class="prod-list-item" e-fill="Product:P0001">
-        <div class="img" style="background-color:--e-Color--">
+        <div class="img" style="background-color:-e-Color-">
         </div>
         <div class="text-content">
             <div class="top-text-content">
                 <div class="info-m">
                     <div class="info">
-                        <b><label>--e-Name--</label></b>
+                        <b><label>-e-Name-</label></b>
                     </div>
                     <div class="info">
-                        <label> --e-Category->Name-- </label>
+                        <label> -e-Category->Name- </label>
                     </div>
                 </div>
                 <div class="info-m">
                     <div class="info">
-                        <label>Custa --e-Price-- AOA</label>
+                        <label>Custa -e-Price- AOA</label>
                     </div>
                     <div class="info">
-                        <label> --e-Stock-- </label> : <label> --e-Id-- </label>
+                        <label> -e-Stock- </label> : <label> -e-Id- </label>
                     </div>
                 </div>
 
             </div>
             <div class="bottom-text-content">
                 <div class="info-max">
-                    <label e-field="Description"> --e-Description-- </label>
+                    <label> -e-Description- </label>
                 </div>
             </div>
         </div>
@@ -126,32 +126,32 @@
 
         <div class="prod-list-item" e-tmp="Product" e-anm="up" 
              title="Clique duas vezes para remover o item.">
-            <div class="img" e-style="background-color:--e-Color--">
+            <div class="img" e-style="background-color:-e-Color-">
             </div>
             <div class="text-content">
                 <div class="top-text-content">
                     
                     <div class="info-m">
                         <div class="info">
-                            <b><label>--e-Name--</label></b>
+                            <b><label>-e-Name-</label></b>
                         </div>
                         <div class="info">
-                            <label>--e-Category->Name--</label>
+                            <label>-e-Category->Name-</label>
                         </div>
                     </div>
                     <div class="info-m">
                         <div class="info">
-                            <label>--e-Price--</label>
+                            <label>-e-Price-</label>
                         </div>
                         <div class="info">
-                            <label>--e-Stock--</label> : <label>--e-Id--</label>
+                            <label>-e-Stock-</label> : <label>-e-Id-</label>
                         </div>
                     </div>
 
                 </div>
                 <div class="bottom-text-content">
                     <div class="info-max">
-                        <label e-field="Description">--e-Description--</label>
+                        <label e-field="Description">-e-Description-</label>
                     </div>
                 </div>
             </div>
