Added e-array command, that allows to set a field as array

--- a/easy.testform.db/index.html
+++ b/easy.testform.db/index.html
@@ -12,11 +12,10 @@
 
     <div id="main-div-container">
 
-        
         <div class="modal-control">
             <div><label>Product</label></div>
             <div><select ><!-- Isto é simplesmente demonstrar como funcionam na tag 'select' -->
-                <option e-tmp="[ds]" value="-e-Id-">-e-Name-</option>
+                <option e-tmp="Product" value="-e-Id-">-e-Name-</option>
             </select></div>
         </div>
         
