--- a/easy.testform.db/index.html
+++ b/easy.testform.db/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Easy Framework Test form</title>
+    <title>Easy library Test form</title>
 </head>
 
 <body>
