--- a/easy.testform.db/index.html
+++ b/easy.testform.db/index.html
@@ -90,7 +90,7 @@
     </div>
     <!-- Single -->
     <div class="prod-list-item" 
-         e-fill="Product:P0001" 
+         e-fill="[Product:P0001]" 
          style="border:1px solid -e-Color-">
         <div class="img" style="background-color:-e-Color-">
         </div>
@@ -126,7 +126,7 @@
     <div id="prod-list">
 
         <div class="prod-list-item" 
-             e-tmp="Product" 
+             e-tmp="[Product]" 
              e-anm="down"
              e-rvs="true" 
              title="Clique duas vezes para remover o item.">
@@ -164,10 +164,48 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../easy.db.js"></script>
+    <script a-src="../easy.db.js"></script>
     <script src="../easy.js"></script>
 
     <script>
+        var Product = [
+        {
+            Id:'P0001',
+            Name:'Dell Computer e72740',
+            Price:1400,
+            Stock:10,
+            Description:'Dell e72740, HD SSD 2TB, 32GB RAM',
+            Aditionals:'Workstation Computer',
+            Color:'#dfa',
+            Category:{
+                Name:"Electronic"
+            }
+        },
+        {
+            Id:'P0002',
+            Name:'Dell Computer e72740',
+            Price:1400,
+            Stock:10,
+            Description:'Dell e72740, HD SSD 2TB, 32GB RAM',
+            Aditionals:'Workstation Computer',
+            Color:'#ea1',
+            Category:{
+                Name:"Electronic"
+            }
+        },
+        {
+            Id:'P0003',
+            Name:'Dell Computer e72740',
+            Price:1400,
+            Stock:10,
+            Description:'Dell e72740, HD SSD 2TB, 32GB RAM',
+            Aditionals:'Workstation Computer',
+            Color:'#c4a',
+            Category:{
+                Name:"Electronic"
+            }
+        },
+    ]
 
         /* I took this page and the styles in other project
         reason why you see medicine-form and other stuffs..
@@ -212,7 +250,7 @@
         });
 
     </script>
-
+    
 </body>
 
 </html>
