Added easy inner list handler

--- a/easy.testform.db/index.html
+++ b/easy.testform.db/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="bottom-text-content">
                     <div class="info-max">
-                        <label e-field="Description">-e-Description-</label>
+                        <label>-e-Description-</label>
                     </div>
                 </div>
             </div>
