Fixed a litle bug in the sample projects: import error

--- a/sample/e.ajax/index.html
+++ b/sample/e.ajax/index.html
@@ -130,8 +130,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../easy.ajax.js"></script>
-    <script src="../easy.js"></script>
+    <script src="../../easy.ajax.js"></script>
+    <script src="../../easy.js"></script>
 
     <script>
 
