--- a/sample/e.db(list)/index.html
+++ b/sample/e.db(list)/index.html
@@ -164,8 +164,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../easy.db.js"></script>
-    <script src="../easy.js"></script>
+    <script src="../../easy.db.js"></script>
+    <script src="../../easy.js"></script>
 
     <script>
 
