Some improvements on easy.js

--- a/sample/e.db(list)/index.html
+++ b/sample/e.db(list)/index.html
@@ -90,7 +90,8 @@
         <!-- Single -->
     
         <div class="prod-list-item filled" 
-             e-fill="Product:P0001"
+             e-fill="Product"
+             e-id="P0001"
              style="border:1px solid -e-Color-">
             <div class="img" e-style="background-color:-e-Color-"></div>
             <div class="text-content">
